# AI-Bootcamp

./: .gitignore  .pre-commit-config.yaml  12.llm-evaluation.ipynb  18.langgraph-basics.ipynb  19.langgraph-crypto-agents.ipynb  24.agents-with-pydantic-ai.ipynb  26.multiple-llm-providers-with-litellm.ipynb  27.langchain-quickstart.ipynb  29.langgraph-quickstart.ipynb  30.multimodal-embeddings-rag.ipynb  GLM-OCR.ipynb  MinerU2.5-2509-1.2B.ipynb  ModernBERT.ipynb  README.md  gemma-3.ipynb  gpt-oss-20b.ipynb  internlm3-8b.ipynb  llama-3-2.ipynb  llama-4.ipynb  medgemma-27b.ipynb  minimax-m2.7.ipynb  nanonets-ocr-s.ipynb  ocrflux-3b.ipynb  pyproject.toml  qwen-3.5.ipynb
tests/: test_minimax.py  test_minimax_integration.py
